# Accounting

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_and_deploy.yml  dockerpush.yml
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs
client/www/: index.html  login.html
db/: 1_0_0.sql  ddl.sql  init.sql
entities/: Cargo.toml
entities/src/: lib.rs
operations/: mount.sh
server/: .env  .gitignore  Cargo.toml
server/src/: data.rs  error.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
transaction/merger/: Cargo.toml
transaction/parser/: Cargo.toml
transaction/parser/src/: error.rs  lib.rs  parser.rs
transaction/processor/: Cargo.toml
transaction/processor/src/: error.rs  lib.rs  parser.rs
