[package]
name = "client"
version = "0.2.0"
authors = ["Zhiyuan Zheng <zhiyuan.zheng@yandex.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entities = { path = "../entities" }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = "0.4"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Node',
  'Location',
]

