[package]
name = "server"
version = "0.2.0"
authors = ["Zhiyuan Zheng <zhiyuan.zheng@yandex.com>"]
edition = "2018"

[dependencies]
entities = { path = "../entities" }

actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
actix-identity = "0.2"
r2d2_sqlite = "0.14"
r2d2 = "0.8"
dotenv = "0.15"

serde_json = "1.0"
rusqlite = "0.21"
env_logger = "0.7"
log = "0.4"
chrono = "0.4"
rand = "0.7"
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
